fix: L2 container alignments

--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-1280.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-1280.scss
@@ -71,7 +71,7 @@
                 }
 
                 .description {
-                    max-width: 590px;
+                    // max-width: 590px;
                     height: 94px;
                     font-size: 16px;
                     line-height: 1.5;
