--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-mobile.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-mobile.scss
@@ -77,7 +77,7 @@
                 .description {
                     width: 320px;
                     height: 98px;
-                    margin: 10px 20px 30px;
+                    margin: -20px 20px 30px;
                     font-size: 13px;
                     font-weight: 600;
                     font-stretch: normal;
