--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-tablet.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-tablet.scss
@@ -76,7 +76,6 @@
           }
   
           .description {
-            max-width: 452px;
             height: 80px;
             font-size: 14px;
             line-height: 1.43;
