--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer.scss
@@ -23,7 +23,8 @@
                 font-size: 16px;
                 line-height: 1.5;
                 color: #808992;
-                margin-top: 15px;
+                margin: 15px 128px 0px 128px;
+
             }
         }
 
@@ -72,8 +73,7 @@
                 }
 
                 .description {
-                    max-width: 700px;
-                    height: 70px;
+                    // height: 70px;
                     margin: 0 87px 30px 0;
                     font-size: 16px;
                     font-style: normal;
